--- a/RestApi/src/main/resources/application.properties
+++ b/RestApi/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.password=sa
 # Hibernate config
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# tink config
+tink.key128Bit=PeShVmYq3s6v9y$B
+tink.extraKey=key123
